--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" width="device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible", content="ie=edge">
+        <script src="script.js"></script>
         <title>Rock Paper Scissors</title>
     </head>
-    <script>
-        
-    </script>
 </html>
