--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" width="device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible", content="ie=edge">
-        <script src="script.js"></script>
-        <title>Rock Paper Scissors</title>
-    </head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" width="device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" , content="ie=edge" />
+    <title>Rock Paper Scissors</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>Man vs. Computer</header>
+    <main>
+      <div class="game-container">
+        <button class="rock-btn">Rock</button>
+        <button class="paper-btn">Paper</button>
+        <button class="scissors-btn">Scissors</button>
+      </div>
+    </main>
+    <script src="script.js"></script>
+  </body>
 </html>
