--- a/index.html
+++ b/index.html
@@ -6,14 +6,44 @@
     <meta http-equiv="X-UA-Compatible" , content="ie=edge" />
     <title>Rock Paper Scissors</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fraunces:wght@700&family=Montserrat:wght@500;700&family=Roboto:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <header>Man vs. Computer</header>
+    <header>Rock Paper Scissors</header>
     <main>
       <div class="game-container">
-        <button class="rock-btn">Rock</button>
-        <button class="paper-btn">Paper</button>
-        <button class="scissors-btn">Scissors</button>
+        <div class="img-and-button-container">
+          <div class="img">
+            <img
+              src="https://images.pexels.com/photos/161702/harmony-relax-rock-moqui-161702.jpeg?auto=compress&cs=tinysrgb&w=1600"
+              alt="rock picture"
+            />
+          </div>
+          <button class="rock-btn">Rock</button>
+        </div>
+        <div class="img-and-button-container">
+          <div class="img">
+            <img
+              src="https://images.pexels.com/photos/2208003/pexels-photo-2208003.jpeg?auto=compress&cs=tinysrgb&w=1600"
+              alt="paper picture"
+            />
+          </div>
+          <button class="paper-btn">Paper</button>
+        </div>
+        <div class="img-and-button-container">
+          <div class="img">
+            <img
+              src="https://images.pexels.com/photos/791159/pexels-photo-791159.jpeg?auto=compress&cs=tinysrgb&w=1600"
+              alt="scissors picture"
+            />
+          </div>
+          <button class="scissors-btn">Scissors</button>
+        </div>
       </div>
     </main>
     <script src="script.js"></script>
